--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             
             <div class="grid">
                 <img src="images/squirrel1.jpg" alt="squirrel">
-                <p>Look at this qute squirrel.</p>
+                <p>Look at this cute squirrel.</p>
             </div>
 
             <div class="grid">
                 <img src="images/squirrel2.jpg" alt="squirrel">
-                <p>Now the qute squirrel looks at you.</p>
+                <p>Now the cute squirrel looks at you.</p>
             </div>
 
             <div class="grid">
