--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </main>
 
     <footer>
-        <p>Copyleft - No copyright owned</p>
+        <p>Copyleft - No copyright owned | Cagatay Usta 2023</p>
     </footer>
 
     
